# pyjamaclient

./: .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  test-requirements.txt  tox.ini
docs/: AbstractItem.md  AbstractItemDataListWrapper.md  AbstractItemDataWrapper.md  AbstractRestResponse.md  AbstractVersionedItem.md  AbstractVersionedItemDataWrapper.md  AbstractitemsApi.md  ActivitiesApi.md  Activity.md  ActivityDataListWrapper.md  ActivityDataWrapper.md  AllowedResource.md  Attachment.md  AttachmentDataListWrapper.md  AttachmentDataWrapper.md  AttachmentsApi.md  AttributePair.md  Baseline.md  BaselineDataListWrapper.md  BaselineDataWrapper.md  BaselineItem.md  BaselineItemDataListWrapper.md  BaselineItemDataWrapper.md  BaselineLocation.md  BaselineOrigin.md  BaselineParent.md  BaselinesApi.md  CollectionSummary.md  Comment.md  CommentBody.md  CommentDataListWrapper.md  CommentDataWrapper.md  CommentLocation.md  CommentsApi.md  CreatedResponse.md  CrossOriginDomainWhiteList.md  DerivedDataFailure.md  DerivedDataHealthDetailsReport.md  DerivedDataHealthReport.md  DerivedDataHealthReportDataWrapper.md  (+149 more)
src/pyjama/: __about__.py  __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
src/pyjama/api/: __init__.py  abstractitems_api.py  activities_api.py  attachments_api.py  baselines_api.py  comments_api.py  (+17 more)
tests/: test_abstract_item.py  test_abstract_item_data_list_wrapper.py  test_abstract_item_data_wrapper.py  test_abstract_rest_response.py  test_abstract_versioned_item.py  test_abstract_versioned_item_data_wrapper.py  test_abstractitems_api.py  test_activities_api.py  test_activity.py  test_activity_data_list_wrapper.py  test_activity_data_wrapper.py  test_allowed_resource.py  test_attachment.py  test_attachment_data_list_wrapper.py  test_attachment_data_wrapper.py  test_attachments_api.py  test_attribute_pair.py  test_baseline.py  test_baseline_data_list_wrapper.py  test_baseline_data_wrapper.py  test_baseline_item.py  test_baseline_item_data_list_wrapper.py  test_baseline_item_data_wrapper.py  test_baseline_location.py  test_baseline_origin.py  test_baseline_parent.py  test_baselines_api.py  test_collection_summary.py  test_comment.py  test_comment_body.py  test_comment_data_list_wrapper.py  test_comment_data_wrapper.py  test_comment_location.py  test_comments_api.py  test_created_response.py  test_cross_origin_domain_white_list.py  test_derived_data_failure.py  test_derived_data_health_details_report.py  test_derived_data_health_report.py  test_derived_data_health_report_data_wrapper.py  (+149 more)
(+177 files in other folders)
