[project]
name = "pyjama"
version = "0.0.1"
description = "Generated Jama Python API"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
keywords = ["jama api client"]
authors = [
  {email = "github@ksansom.com"},
  {name = "Kurt Sansom"}
]
classifiers = [
  "Private :: Do Not Upload",
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Utilities"
]
dependencies = [
  "importlib_metadata; python_version<'3.8'",
  "python_dateutil >= 2.5.3",
  "urllib3 >= 1.25.3"
]

[project.optional-dependencies]
all = [
]

[project.urls]
homepage = "https://github.com/kurtsansom/pyjamaclient"
code = "https://github.com/kurtsansom/pyjamaclient"
issues = "https://github.com/kurtsansom/pyjamaclient/issues"

# [project.entry-points.console_scripts]
# pyjama = "pyjama._cli:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    "api",
    "model",
]