[metadata]
name = pyjama
version = 0.0.1
author = Kurt Sansom et al.
author_email = github@ksansom.com
description = Generated Jama Python API
url = https://github.com/kurtsansom/pyjamaclient
project_urls =
    Code=https://github.com/kurtsansom/pyjamaclient
    Issues=https://github.com/kurtsansom/pyjamaclient
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-clause
classifiers =
    Private :: Do Not Upload
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities
keywords =
    OpenAPI, OpenAPI-Generator, Jama REST API

[options]
package_dir =
    =src
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    python_dateutil >= 2.5.3
    urllib3 >= 1.25.3
python_requires = >=3.6

[options.packages.find]
where=src

[options.extras_require]
all =

# [options.entry_points]
# console_scripts =
#     pyjama = pyjama._cli:main

